# OrthogonalPolys3D

./: CMakeLists.txt  README.md
include/: .orthoPoly3D.H.swp  orthoPoly1D.H  orthoPoly3D.H
include/unsupported/Eigen/: .KroneckerProduct.swp
python2.7/: orthogopoly.py
src/: orthoPoly3D.C
testing/: CMakeLists.txt  runUnitTests  testOrthoPoly.C
utils/: .orthoPolyRun.C.swp  orthoPolyRun.C
